2002-03-28  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Bump version number to 1.0.6

2002-03-19  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.mime:

	Add Wine for windows executables.

	Fix regexp for anim files.
	
2002-03-16  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Up the version number to 1.0.5.
	
	* gnome-vfs-mime-magic:

	Add magic for detecting libraries and core files, from
	Havard Wigtil (sorry, the character didn't want to stick
	in the file correctly :-)
	
	* gnome-vfs.keys.in:

	Better descriptions for .m3u files and for RealMedia
	files.
	
2002-03-16  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2002-03-05  Seth Nickell  <snickell@stanford.edu>

	* configure.in:
	* icons/Makefile.am:
	* icons/gnome-text-plain.png:

	Delete icon because Nautilus wants to have text previews.
	
2002-03-03  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am: install the icons mentioned underneath there

2002-02-27  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:
	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added ROM filetypes,
	gtktalog, zsh, binhex and stuffit. Added file-roller as the default
	program for archives.
	* icons/gnome-application-x-dc-rom.png:
	* icons/gnome-application-x-gameboy-rom.png:
	* icons/gnome-application-x-genesis-rom.png:
	* icons/gnome-application-x-gtktalog.png:
	* icons/gnome-application-x-msx-rom.png:
	* icons/gnome-application-x-n64-rom.png:
	* icons/gnome-application-x-nes-rom.png:
	* icons/gnome-application-x-sms-rom.png:
	* icons/gnome-application-x-stuffit.png:
	* icons/gnome-text-x-patch.png:
	* icons/gnome-text-x-perl.png:
	* icons/gnome-text-x-zsh.png:
	* icons/gnome-text-xml.png: added some (!) icons
	by jimmac

2002-02-25  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added Malay (ms)to ALL_LINGUAS.