@@ -1,3 +1,9 @@
+2002-04-18  Michael Meeks  <michael@ximian.com>
+
+	* gnome-vfs.keys.in: update all the OAFIIDs
+	to the new nautilus versions, needs a new
+	nautilus to play well.
+
 2002-03-28  Seth Nickell  <snickell@stanford.edu>
 
 	* configure.in:
